@@ -5,6 +5,13 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 2020-01-02 - SK - v.1.1.7
+              - SL - v.1.0.6
+              - NL - v.1.0.6
+### Changed
+- Google Maps APIkey bug fix (#510)
+- Updated disableReason_EndPoint for SK and SL
+
 ## 2020-01-02 - SK - v.1.1.6
 ### Changed
 - Incorrect minutes indication key (#496)
